--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -53,16 +53,23 @@ body {
 }
 
 .logo-icon {
-  width: 40px;
-  height: 40px;
+  width: 300px;
+  height: 60px;
   background-color: var(--accent-blue);
   color: white;
-  border-radius: 8px;
+  border-radius: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 20px;
+  overflow: hidden;
 }
+
+#logo-size{
+  height: 80px;
+  width: 300px;
+}
+
 
 h1 {
   color: var(--text-lightest);
