--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -53,8 +53,8 @@ body {
 }
 
 .logo-icon {
-  width: 300px;
-  height: 60px;
+  width: 311px;
+  height: 80px;
   background-color: var(--accent-blue);
   color: white;
   border-radius: 15px;
@@ -63,11 +63,12 @@ body {
   justify-content: center;
   font-size: 20px;
   overflow: hidden;
+  border: none;
 }
 
 #logo-size{
-  height: 80px;
-  width: 300px;
+  height: 100px;
+  width: 311px;
 }
 
 
